Added @title to controller actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>Cookbook</title>
+  <title><%=@title %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -13,10 +13,16 @@
     </header>
     <section class="content">
       <nav>
-        <%=link_to 'Home', root_url %>
-        <%=link_to 'About', about_url %>
-        <%=link_to 'Contact', contact_url %>
+        <%=link_to_unless_current 'Home', root_url %>
+        <%=link_to_unless_current 'Recipes', recipes_url %>
+        <%=link_to_unless_current 'About', about_url %>
+        <%=link_to_unless_current 'Contact', contact_url %>
       </nav>
+      <% if notice %>
+        <div id="notice">
+          <%= notice %>
+        </div>
+      <% end %>
       <%= yield %>
     </section>
     <footer>
