--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,19 +1,16 @@
-<p id="notice"><%= notice %></p>
+<article>
+  <header>
+    <h2>
+      <%= @recipe.title %>
+      [ <%= link_to 'Edit', edit_recipe_path(@recipe) %> ]
+    </h2>
+  </header>
 
-<p>
-  <strong>Title:</strong>
-  <%= @recipe.title %>
-</p>
+  <h3>Ingredients:</h3>
+  <p><%= @recipe.ingredients %></p>
 
-<p>
-  <strong>Ingredients:</strong>
-  <%= @recipe.ingredients %>
-</p>
+  <h3>Instructions</h3>
+  <p><%= @recipe.instructions %></p>
+</article>
 
-<p>
-  <strong>Instructions:</strong>
-  <%= @recipe.instructions %>
-</p>
-
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
+<p><%= link_to 'Back', recipes_path %></p>
