--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <p class="required">All fields are required.</p>
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
