--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -23,6 +23,14 @@
     <%= f.label :instructions %><br>
     <%= f.text_area :instructions %>
   </div>
+  <div class="field">
+    <%= f.label :category_id %><br>
+    <%= f.select :category_id, @categories, :include_blank => true %>
+  </div>
+  <div class="field">
+    <%= f.label :calories %><br>
+    <%= f.text_field :calories %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
