--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,11 +6,16 @@
     </h2>
   </header>
 
+  <p>Category: <%= h(@recipe.category.name) rescue 'No category found' %></p>
+
   <h3>Ingredients:</h3>
   <p><%= @recipe.ingredients %></p>
 
   <h3>Instructions</h3>
   <p><%= @recipe.instructions %></p>
+  
+  <h3>Calories</h3>
+  <p><%= @recipe.calories %></p>
 </article>
 
 <p><%= link_to 'Back', recipes_path %></p>
