--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <tr>
     <th>Title</th>
+    <th>Category</th>
     <th>Last Updated</th>
     <th colspan="2">&nbsp;</th>
   </tr>
@@ -10,6 +11,7 @@
   <% @recipes.each do |recipe| %>
   <tr>
     <td><%= link_to recipe.title, recipe %></td>
+    <td><%= recipe.category.name rescue "No category" %></td>
     <td><%= time_ago_in_words(recipe.updated_at) %> ago</td>
     <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
     <td><%= button_to 'Destroy', recipe, confirm: 'Are you sure?', method: :delete %></td>
