Add some chp 8 stuff

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -19,4 +19,6 @@
   <% end %>
 </table>
 
-<%= link_to 'New Recipe', new_recipe_path %>
+<% if logged_in? %>
+  <%= link_to 'New Recipe', new_recipe_path %>
+<% end %>
