Added latest recipe

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
 <%= render "/shared/search" %>
 <h2>Latest Recipes</h2>
 <p>There are <%= @number_of_recipes %> recipes total.</p>
+<% if @latest_recipe %>
+  <h4><%=@latest_recipe.title %></h4>
+  <p><%=@latest_recipe.ingredients %></p>
+  <p><%=@latest_recipe.instructions %></p>
+<% else %>
+  <p>There are no recipes to display</p>
+<% end %>
